Added responsiveness for phones/portrait mode

--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
 
     <div class="trend-box">
         <h1>Trending</h1>
+
+
         <div class="top-movies">
             <div class="movie">
                 <div class="num">1</div>
                 <img src="top1.jpg" alt="" />
             </div>
-
             <div class="movie">
                 <div class="num">2</div>
                 <img src="top2.jpg" alt="" />
@@ -61,7 +62,10 @@
                 <div class="num">4</div>
                 <img src="top4.jpg" alt="" />
             </div>
+
         </div>
+
+
     </div>
     <div class="more-reasons">
         <h1>More reasons to join</h1>
@@ -106,13 +110,13 @@
                     week!</option>
             </select>
 
-            <select id="faq1">
+            <select id="faq2">
                 <option>How much does Netflix cost?</option>
                 <option>Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one
                     fixed monthly fee. Plans range from ₹149 to ₹649 a month. No extra costs, no contracts.</option>
             </select>
 
-            <select id="faq1">
+            <select id="faq3">
                 <option>Where can I watch?</option>
                 <option>Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at
                     netflix.com from your personal computer or on any internet-connected device that offers the Netflix
@@ -121,7 +125,7 @@
                     while you're on the go and without an internet connection. Take Netflix with you anywhere.</option>
             </select>
 
-            <select id="faq1">
+            <select id="faq4">
                 <option>What is Netflix?</option>
                 <option>Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies,
                     anime, documentaries and more – on thousands of internet-connected devices.</option>
@@ -134,14 +138,18 @@
     </div>
 
     <div class="ready">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae dolorum necessitatibus aut.
-
+        <p>Ready to Watch? Enter your email to create or restart your membership.
         </p>
         <div class="start">
             <input type="mail" class="mail" placeholder="Email address" style="width: 400px" />
             <button class="started">Get Started ></button>
         </div>
     </div>
+
+    <div class="copy-right">
+        &copy; 2025 Nicky. This project is created for educational purposes only.
+    </div>
+
 </body>
 
 </html>
