--- a/index.html
+++ b/index.html
@@ -72,25 +72,25 @@
         <div class="all-reasons">
             <div class="reason">
                 <h2>Enjoy on your TV</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex dolores delectus ducimus!</p>
+                <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
 
             </div>
 
             <div class="reason">
-                <h2>Enjoy on your TV</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex dolores delectus ducimus!</p>
+                <h2>Download your shows to watch offline</h2>
+                <p>Save your favourites easily and always have something to watch.</p>
 
             </div>
 
             <div class="reason">
-                <h2>Enjoy on your TV</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex dolores delectus ducimus!</p>
+                <h2>Watch everywhere</h2>
+                <p>Stream unlimited movies and TV shows on your phone, tablet, laptop and TV.</p>
 
             </div>
 
             <div class="reason">
-                <h2>Enjoy on your TV</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex dolores delectus ducimus!</p>
+                <h2>Create profiles for kids</h2>
+                <p>Send kids on adventures with their favourite characters in a space made just for them — free with your membership.</p>
 
             </div>
         </div>
